ajuste del form

--- a/layouts/styles/sections/_form.scss
+++ b/layouts/styles/sections/_form.scss
@@ -1,7 +1,7 @@
 @import "../utilities/variables";
 
 .body-form {
-    padding: 1em;
+    padding: .3em;
     margin: 0px;
     background-color: $verde;
     a {
@@ -9,7 +9,7 @@
         justify-content: center;
         align-items: center;
         margin: auto;
-        width: 10em;
+        width: 7em;
         padding: 1em;
         background-color: $naranja;
         border: 2px solid $oscuro;
