--- a/layouts/styles/style.css
+++ b/layouts/styles/style.css
@@ -277,10 +277,10 @@ footer {
   padding: 2em;
 }
 footer .footer-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(8em, 1fr));
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   text-align: center;
-  align-items: start;
   color: #181823;
 }
 footer .footer-container h4 {
@@ -376,7 +376,7 @@ footer .footer-container .contacto .icon-container div svg {
 }
 /*PALETA DE COLORES*/
 .body-form {
-  padding: 1em;
+  padding: 0.3em;
   margin: 0px;
   background-color: #1f8a70;
 }
@@ -385,7 +385,7 @@ footer .footer-container .contacto .icon-container div svg {
   justify-content: center;
   align-items: center;
   margin: auto;
-  width: 10em;
+  width: 7em;
   padding: 1em;
   background-color: #fc7300;
   border: 2px solid #181823;
